<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">F-Zero X VR</string>
    <string name="launcher_title">F-Zero X VR</string>
    <string name="launcher_subtitle">F-Zero X, rebuilt for standalone VR.</string>
    <string name="launcher_rom_label">F-Zero X ROM</string>
    <string name="launcher_no_rom">No ROM selected</string>
    <string name="launcher_no_rom_description">Select your F-Zero X USA Rev 0 ROM to get started.</string>
    <string name="launcher_choose_rom">Select ROM</string>
    <string name="launcher_change_rom">Change ROM</string>
    <string name="launcher_play">Launch F-Zero X VR</string>
    <string name="launcher_starting">Launching…</string>
    <string name="launcher_vr_settings">VR Settings</string>
    <string name="launcher_rom_ready">Ready to play</string>
    <string name="launcher_rom_checking_description">Checking and importing the selected ROM…</string>
    <string name="launcher_rom_error_title">Incompatible ROM</string>
    <string name="launcher_invalid_rom">This ROM could not be read.</string>
    <string name="launcher_choose_another_rom">Select another ROM</string>
    <string name="launcher_version">Version %1$s</string>

    <string name="settings_title">VR Settings</string>
    <string name="settings_subtitle">Applied the next time the game is launched.</string>
    <string name="settings_refresh_label">Display refresh rate</string>
    <string name="settings_refresh_description">The Quest runtime will use the closest supported refresh rate.</string>
    <string name="settings_start_diorama">Start races in diorama mode</string>
    <string name="settings_start_diorama_description">You can still toggle diorama in-game with the right stick click.</string>
    <string name="settings_save">Save settings</string>
    <string name="settings_back">Back</string>
    <string name="settings_saved">VR settings saved</string>
    <string name="settings_save_failed">Could not save VR settings</string>
</resources>
